--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 blinker==1.4
 click==6.7
+Faker==0.8.10
 Flask==0.12.2
 Flask-Mail==0.9.1
 Flask-Session==0.3.1
@@ -8,5 +9,9 @@ Jinja2==2.10
 MarkupSafe==1.0
 maxminddb==1.3.0
 maxminddb-geolite2==2017.803
+Pygments==2.2.0
+python-dateutil==2.6.1
+six==1.11.0
+text-unidecode==1.1
 vincenty==0.1.4
 Werkzeug==0.12.2
