--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ Faker==0.8.10
 Flask==0.12.2
 Flask-Mail==0.9.1
 Flask-Session==0.3.1
+geopy==1.11.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 maxminddb==1.3.0
 maxminddb-geolite2==2017.803
-Pygments==2.2.0
 python-dateutil==2.6.1
 six==1.11.0
 text-unidecode==1.1
